fix horizontal scroll

--- a/strizzer_black_and_white/css/styleReset.scss
+++ b/strizzer_black_and_white/css/styleReset.scss
@@ -15,4 +15,5 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
+    overflow-x: hidden;
 }
